--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -14,13 +14,13 @@
         until: download_java_binaries is succeeded
         tags: java
       - name: Ensure installation dir exists
-        #become: true
+        become: true
         file:
           state: directory
           path: "{{ java_home }}"
         tags: java
       - name: Extract java in the installation directory
-        #become: true
+        become: true
         unarchive:
           copy: false
           src: "/tmp/jdk-{{ java_jdk_version }}.tar.gz"
@@ -28,10 +28,10 @@
           extra_opts: [--strip-components=1]
           creates: "{{ java_home }}/bin/java"
         tags:
-          - skip_ansible_lint
+        #  - skip_ansible_lint
           - java
       - name: Export environment variables
-        #become: true
+        become: true
         template:
           mode: 0755
           src: jdk.sh.j2
@@ -42,7 +42,7 @@
     tasks:
       - name: Upload tar.gz Elasticsearch from remote URL
         get_url:
-          url: "https://xn--62-6kc1apxaa9a3c.xn--p1ai/docs/elasticsearch-7.17.4-linux-x86_64.tar.gz"
+          url: "https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-{{ elastic_version }}-linux-x86_64.tar.gz"
           dest: "/tmp/elasticsearch-{{ elastic_version }}-linux-x86_64.tar.gz"
           mode: 0755
           timeout: 60
@@ -57,7 +57,7 @@
           path: "{{ elastic_home }}"
         tags: elastic
       - name: Extract Elasticsearch in the installation directory
-        #become: yes
+        become: yes
         unarchive:
           copy: false
           src: "/tmp/elasticsearch-{{ elastic_version }}-linux-x86_64.tar.gz"
@@ -65,10 +65,10 @@
           extra_opts: [--strip-components=1]
           creates: "{{ elastic_home }}/bin/elasticsearch"
         tags:
-          - skip_ansible_lint
+        #  - skip_ansible_lint
           - elastic
       - name: Set environment Elastic
-        #become: yes
+        become: yes
         template:
           src: templates/elk.sh.j2
           dest: /etc/profile.d/elk.sh
@@ -93,7 +93,7 @@
           state: directory
         tags: kibana
       - name: Extract Kibana in the installation directory
-        #become: yes
+        become: true
         unarchive:
           copy: false
           src: "/tmp/kibana-{{ kibana_version }}-linux-x86_64.tar.gz"
@@ -101,11 +101,47 @@
           extra_opts: [--strip-components=1]
           creates: "{{ kibana_home }}/bin/kibana"
         tags:
-          - skip_ansible_lint
+        #  - skip_ansible_lint
           - kibana
       - name: Set environment Kibana
-        #become: yes
+        become: true
         template:
           src: templates/kib.sh.j2
           dest: /etc/profile.d/kib.sh
+        tags: kibana
+  - name: Install logstash
+    hosts: logstash
+    tasks:
+      - name: Upload tar.gz logstashsearch from remote URL
+        get_url:
+          url: "https://artifacts.elastic.co/downloads/logstash/logstash-{{ logstash_version }}-linux-x86_64.tar.gz"
+          dest: "/tmp/logstash-{{ logstash_version }}-linux-x86_64.tar.gz"
+          mode: 0755
+          timeout: 60
+          force: true
+          validate_certs: false
+        register: get_logstash
+        until: get_logstash is succeeded
+        tags: [logstash never]
+      - name: Create directrory for logstash ({{ logstash_home }})
+        file:
+          path: "{{ logstash_home }}"
+          state: directory
+        tags: logstash
+      - name: Extract logstash in the installation directory
+        become: true
+        unarchive:
+          copy: false
+          src: "/tmp/logstash-{{ logstash_version }}-linux-x86_64.tar.gz"
+          dest: "{{ logstash_home }}"
+          extra_opts: [--strip-components=1]
+          creates: "{{ logstash_home }}/bin/logstash"
+        tags:
+        #  - skip_ansible_lint
+          - logstash
+      - name: Set environment logstash
+        become: true
+        template:
+          src: templates/log.sh.j2
+          dest: /etc/profile.d/log.sh
         tags: kibana
